--- a/develop/blocks/authorization/authorization.scss
+++ b/develop/blocks/authorization/authorization.scss
@@ -107,10 +107,17 @@
         height: 22px;
         margin-left: 8px;
 
+        &:hover {
+            svg {
+                fill: $theme-color;
+            }
+        }
+
         svg {
             @include svg-icon;
 
             fill: #9c9c9c;
+            transition: fill 300ms ease;
         }
     }
 }
