--- a/develop/blocks/monitoring-table/monitoring-table.scss
+++ b/develop/blocks/monitoring-table/monitoring-table.scss
@@ -13,8 +13,9 @@
                 padding: 10px;
                 vertical-align: top;
 
-                font-size: 10px;
+                font-size: 12px;
                 line-height: 1.2;
+                white-space: nowrap;
 
                 &.right {
                     text-align: right;
@@ -74,9 +75,10 @@
 
             thead {
                 td {
-                    font-size: 8px;
+                    font-size: 10px;
                     color: #696969;
                     font-weight: 500;
+                    white-space: initial;
                 }
             }
         }
