--- a/develop/blocks/partner-friends/partner-friends.scss
+++ b/develop/blocks/partner-friends/partner-friends.scss
@@ -1,4 +1,6 @@
 .partner-friends {
+    position: relative;
+    z-index: 9;
     &__add {
         @include btn-reset;
         position: relative;
@@ -50,7 +52,7 @@
                 right: 0;
 
                 &::before {
-                    background-color: #c2c2c2;
+                    background-color: $theme-color;
                     opacity: 1;
                 }
             }
