--- a/develop/blocks/partner-links/partner-links.scss
+++ b/develop/blocks/partner-links/partner-links.scss
@@ -50,7 +50,7 @@
                 right: 0;
 
                 &::before {
-                    background-color: #c2c2c2;
+                    background-color: $theme-color;
                     opacity: 1;
                 }
             }
