--- a/develop/blocks/account-news/account-news.pug
+++ b/develop/blocks/account-news/account-news.pug
@@ -2,6 +2,13 @@ mixin account-news()
     +b.SECTION.account-news
         +e.column
             +e.H2.column-title Новости ваших фондов
+            +e.tags
+                +e.A.tag(href='#') #А1
+                +e.A.tag(href='#') #А2
+                +e.A.tag(href='#') #А3
+                +e.A.tag(href='#') #А4
+                +e.A.tag(href='#') #А5
+                +e.A.tag(href='#') #А11
             +e.empty
                 +e.empty-title У вас пока нет приобритенных фондов :(
                 +e.A.empty-link.btn(href='#') Выбрать
