--- a/develop/blocks/index-slider/index-slider.pug
+++ b/develop/blocks/index-slider/index-slider.pug
@@ -7,7 +7,7 @@ mixin index-slider()
                 +e.title Объект «Эко видное»
                 +e.price-value 59 227 357&nbsp;₽
                 +e.price-label Прибыль&nbsp;для распределения&nbsp;за&nbsp;2019&nbsp;г.
-                +e.A.link(href='object-page.html') Инвестировать в объект
+                //- +e.A.link(href='object-page.html') Инвестировать в объект
         +e.slide
             +e.image
                 img(src='images/redesign/object-cards/object2.jpg')
@@ -15,4 +15,4 @@ mixin index-slider()
                 +e.title Объект «Эко очень»
                 +e.price-value 19 227₽
                 +e.price-label Прибыль&nbsp;для распределения&nbsp;за&nbsp;2019&nbsp;г.
-                +e.A.link(href='object-page.html') Инвестировать в объект
+                //- +e.A.link(href='object-page.html') Инвестировать в объект
