--- a/develop/blocks/about-team/about-team.pug
+++ b/develop/blocks/about-team/about-team.pug
@@ -6,7 +6,8 @@ mixin about-team()
                 +e.subtitle
                     +title
                         | Наша<br> команда
-            +e.list
+            //- +e.list
+            +e.slider
                 +e.teammate
                     +e.FIGURE.figure
                         img(src="images/redesign/about/team1.jpg", alt="")
@@ -19,6 +20,12 @@ mixin about-team()
                         +e.FIGCAPTION.figcaption
                             +e.name Егор Клименко
                             +e.post Генеральный директор
+                +e.teammate
+                    +e.FIGURE.figure
+                        img(src="images/redesign/about/team3.jpg", alt="")
+                        +e.FIGCAPTION.figcaption
+                            +e.name Михаил Костромин
+                            +e.post Директор по продажам
                 +e.teammate
                     +e.FIGURE.figure
                         img(src="images/redesign/about/team3.jpg", alt="")
