--- a/develop/blocks/about-team/about-team.scss
+++ b/develop/blocks/about-team/about-team.scss
@@ -21,7 +21,7 @@
         }
     }
 
-    &__list {
+    &__list &__slider {
         position: relative;
         z-index: 12;
     }
@@ -101,6 +101,40 @@
 
         &__list {
             display: flex;
+            flex-flow: row wrap;
+        }
+
+        &__slider {
+            .slick-arrow {
+                @include btn-reset;
+                position: absolute;
+                top: 50%;
+                z-index: 11;
+                left: 0;
+                width: 35px;
+                height: 35px;
+                transform: translateY(-50%) rotate(-45deg);
+
+                border-width: 0 1px 1px 0;
+                border-style: solid;
+                border-color: $theme-color;
+
+                font-size: 0;
+
+                &.slick-prev {
+                    left: 16px;
+                    transform: translateY(-50%) rotate(135deg);
+                }
+
+                &.slick-next {
+                    left: auto;
+                    right: 16px;
+                }
+            }
+
+            .about-team__teammate {
+                margin-bottom: 0;
+            }
         }
 
         &__teammate {
@@ -125,6 +159,14 @@
             margin-top: -10px;
 
             font-size: 101px;
+        }
+
+        &__list {
+            margin-bottom: -32px;
+        }
+
+        &__teammate {
+            margin-bottom: 32px;
         }
 
         &__figure {
@@ -154,10 +196,15 @@
         }
 
         &__teammate {
+            margin-bottom: -48px;
+        }
+
+        &__teammate {
             width: 400px;
             flex: 1 1 auto;
+            margin-bottom: 48px;
 
-            &:last-child {
+            &:nth-child(3n) {
                 width: 360px;
             }
         }
