--- a/develop/blocks/account-document/account-document.scss
+++ b/develop/blocks/account-document/account-document.scss
@@ -234,6 +234,7 @@
             width: 50%;
             flex-flow: row nowrap;
             align-items: center;
+            justify-content: flex-end;
         }
 
         &__price {
