--- a/develop/scss/main.scss
+++ b/develop/scss/main.scss
@@ -17,10 +17,12 @@ body {
     }
 
     --theme-background-color: #fff;
+    --theme-secondary-color: #fff;
     --theme-text-color: #000;
 
     &[theme='dark-theme'] {
         --theme-background-color: #202020;
+        --theme-secondary-color: #303030;
         --theme-text-color: #fff;
     }
 }
