--- a/develop/blocks/account-poll/account-poll.scss
+++ b/develop/blocks/account-poll/account-poll.scss
@@ -9,10 +9,18 @@
     &__form {
         &.voted {
             .account-poll__vote {
-                font-weight: 600;
+                &.selected {
+                    font-weight: 600;
+                }
 
                 .percentage {
                     display: block;
+                }
+
+                .progress {
+                    animation: pollProgress 600ms ease-in forwards;
+
+                    transform-origin: left center;
                 }
 
                 &:hover {
@@ -35,6 +43,7 @@
         font-size: 12px;
         color: $text-color;
         text-align: left;
+        text-decoration: none;
 
         border-bottom: 1px solid #f0f0f0;
 
@@ -76,5 +85,17 @@
 
 @media #{$desktop} {
     .account-poll {
+    }
+}
+
+@keyframes pollProgress {
+    0% {
+        transform: scaleX(0);
+    }
+    80% {
+        transform: scaleX(1.5);
+    }
+    100% {
+        transform: scaleX(1);
     }
 }
