--- a/develop/blocks/index-top/index-top.pug
+++ b/develop/blocks/index-top/index-top.pug
@@ -5,7 +5,7 @@ mixin index-top()
                 +e.title
                     +title('h1', 'light')(data-aos="fade-left-full" data-aos-duration='1000')
                         | Коллективные <br>инвестиции<br> в коммерческую<br> недвижимость
-                    +e.A.tip(href='#') Что такое коллективные инвестиции
+                    +e.A.tip(href='#' data-aos="fade-down" data-aos-delay='700') Что такое коллективные инвестиции
                 +e.A.link.btn(href='#' data-aos="fade-down" data-aos-delay='700') Все объекты
                 +e.UL.advantages
                     +e.LI.advantages-item(data-aos="fade-down" data-aos-delay='700')
