--- a/develop/blocks/monitoring-data/monitoring-data.scss
+++ b/develop/blocks/monitoring-data/monitoring-data.scss
@@ -47,6 +47,8 @@
     }
 
     &__data-label {
+        display: inline-block;
+        position: relative;
         margin: 0 0 4px;
 
         font-size: 12px;
@@ -86,6 +88,24 @@
                 opacity: 0.6;
             }
         }
+    }
+
+    &__data-info {
+        @include btn-reset;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        right: -12px;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        font-size: 7px;
+        line-height: 1;
+
+        background-color: $theme-color;
+        border-radius: 50%;
     }
 
     &__toggles {
