--- a/develop/jade/account-page-8.pug
+++ b/develop/jade/account-page-8.pug
@@ -27,6 +27,7 @@ html(lang='ru')
                             +e.data-value до 30.09.2020
                         +e.data-block
                             +e.data-label Рейтинг фонда:
+                                +e.BUTTON.data-info.info-trigger(type='button') ?
                             +e.data-value.--green А1
                     +e.data-col
                         +e.data-block
@@ -89,4 +90,5 @@ html(lang='ru')
                     +monitoring-table
         +main-footer
             +lines
+        +info-modal
         +doc-footer
