--- a/develop/blocks/modal/modal.scss
+++ b/develop/blocks/modal/modal.scss
@@ -109,6 +109,8 @@
 
         ol, ul {
             padding: 0;
+            padding-left: 20px;
+            list-style-position: inside;
             margin: 0 0 16px;
         }
     }
